syntax = "proto3";

option java_multiple_files = true;
package ru.awg.rupost;

message ProductCard {
  string title = 1;
  double rating = 2;
  uint32 reviews_count = 3;
  double price = 4;
  string image_url = 5;
  string description = 6;
}

message ProductCardRequest {
  string token = 1;
  uint64 id = 2;
}

message ProductCardResponse {
  ProductCard products = 1;
}

message ProductCardsRequest {
  string token = 1;
}

message ProductCardsResponse {
  repeated ProductCard products = 1;
}

service ProductService {
  rpc product(ProductCardRequest) returns (ProductCardResponse);
  rpc products(ProductCardsRequest) returns (ProductCardsResponse);
}